# pyre-ios

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: hardware.md  ios_automation.md  ios_setup.md  rclone_setup.md
jobs/: __init__.py  finanzen_net.py  setup.py
jobs/utils/: __init__.py  logger.py
